<resources>
    <string name="app_name">TRAVEL NOTE</string>
    <string name="back_close">뒤로가기를 한 번 더 누르면 종료됩니다.</string>
    <string name="network_error">인터넷 연결이 원활하지 않습니다.\n연결 상태를 확인해주세요.</string>
    <string name="all_confirm">확인</string>
    <string name="all_error">데이터를 가져오지 못했습니다.</string>

    <string name="travel_tab_record">기록</string>
    <string name="travel_tab_setting">설정</string>

    <string name="travel_date_range">%s - %s</string>

    <string name="travel_write_title">여행 기록</string>
    <string name="travel_write_title_description">여행의 제목을 알려주세요.</string>
    <string name="travel_write_edit_hint">ex) 제주도 당일치기!</string>
    <string name="travel_write_start_date_description">언제 출발하나요?</string>
    <string name="travel_write_date_button">날짜를 입력해주세요</string>
    <string name="travel_write_end_date_description">언제 돌아오나요?</string>
    <string name="travel_write_create">생성하기</string>
    <string name="travel_write_error">모두 적어주셔야 합니다</string>

    <string name="time_patten">yyyy-MM-dd</string>

    <string name="travel_check_list">체크리스트</string>
    <string name="travel_diary">여행일지</string>
    <string name="register_checklist">항목 추가</string>
</resources>