<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.teamunknown.application.utils.TimeUtil" />

        <variable
            name="viewModel"
            type="com.teamunknown.application.screen.travelwrite.TravelWriteViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Theme.Hackathon.Sub">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/abl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/icon_back"
                app:title="">

                <TextView
                    android:id="@+id/titleView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/travel_write_title"
                    android:textAppearance="@style/TextAppearance.unknown.HeadLine1"
                    android:textColor="@color/black" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/abl">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@drawable/divider_e0e0e0"
                android:orientation="vertical"
                android:showDividers="middle|end">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/travel_write_layout_margin">

                    <TextView
                        android:id="@+id/tv_travel_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/travel_write_title_description"
                        android:textAppearance="@style/TextAppearance.unknown.HeadLine2"
                        android:textColor="@color/colorGray"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_travel_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:background="@android:color/transparent"
                        android:ellipsize="end"
                        android:hint="@string/travel_write_edit_hint"
                        android:imeOptions="flagNoExtractUi"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:selectAllOnFocus="true"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textColor="@color/colorGray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_travel_title" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/travel_write_layout_margin">

                    <TextView
                        android:id="@+id/tv_travel_start_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/travel_write_start_date_description"
                        android:textAppearance="@style/TextAppearance.unknown.HeadLine2"
                        android:textColor="@color/colorGray"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.TravelNote.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:gravity="start|center"
                        android:onClickListener="@{()-> viewModel.navigateToStartDate()}"
                        android:text="@{viewModel.startDateTime != null ? (TimeUtil.getDateTimeFormatString(viewModel.startDateTime, @string/time_patten)) : @string/travel_write_date_button }"
                        android:textAppearance="@style/TextAppearance.unknown.Body1"
                        android:textColor="@color/colorGray"
                        app:icon="@drawable/icon_calendar"
                        app:iconGravity="end"
                        app:iconTint="@color/colorLightBlue"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_travel_start_date"
                        tools:text="2022-12-12" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/travel_write_layout_margin">

                    <TextView
                        android:id="@+id/tv_travel_end_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/travel_write_end_date_description"
                        android:textAppearance="@style/TextAppearance.unknown.HeadLine2"
                        android:textColor="@color/colorGray"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.TravelNote.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:gravity="start|center"
                        android:onClickListener="@{()-> viewModel.navigateToEntDate()}"
                        android:text="@{viewModel.endDateTime != null ? (TimeUtil.getDateTimeFormatString(viewModel.endDateTime, @string/time_patten)) : @string/travel_write_date_button }"
                        android:textAppearance="@style/TextAppearance.unknown.Body1"
                        android:textColor="@color/colorGray"
                        app:icon="@drawable/icon_calendar"
                        app:iconGravity="end"
                        app:iconTint="@color/colorLightBlue"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_travel_end_date"
                        tools:text="2022-12-13" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Custom.Button"
            android:layout_marginHorizontal="14dp"
            android:layout_marginBottom="30dp"
            android:text="@string/travel_write_create"
            android:onClickListener="@{()-> viewModel.createTravel()}"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>